--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,10 @@ input[type="checkbox"] {
     text-transform: uppercase;
 }
 
+.section-title2 span {
+    color: #fff;
+}
+
 
 /* ======= Navbar style ======= */
 
@@ -829,6 +833,10 @@ hr {
     margin-bottom: 20px;
     border: 0;
     border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+hr.dotted {
+    border-top: 2px dotted #b19777;
 }
 
 
@@ -3001,4 +3009,16 @@ button.mfp-arrow {
     .text-right {
         text-align: center;
     }
+}
+
+
+/* PopUp */
+
+.white-popup {
+    position: relative;
+    background: #FFF;
+    padding: 20px;
+    width: auto;
+    max-width: 500px;
+    margin: 20px auto;
 }
