Creacion de CRUD de Servicios

--- a/resources/sass/base/bootstrap-extended/_variables.scss
+++ b/resources/sass/base/bootstrap-extended/_variables.scss
@@ -48,7 +48,7 @@ $spacers: map-merge( ( 0: 0, 25: ( $spacer * 0.25), 50: ( $spacer * 0.5), 75: ( 
 // Body
 //
 // Settings for the `<body>` element.
-$body-bg: #272727 !default;
+$body-bg: #fff !default;
 $body-color: #6e6b7b !default;
 // Links
 //
