--- a/resources/sass/base/bootstrap-extended/_variables.scss
+++ b/resources/sass/base/bootstrap-extended/_variables.scss
@@ -8,7 +8,7 @@
 //  ================================================================================================
 // Color system
 $white: #fff !default;
-$bauen: #b19777 !default;
+$bauen: #838487 !default;
 $gray-50: #f6f6f6 !default;
 $gray-100: #babfc7 !default; // $gray-lightest
 $gray-200: #ededed !default; // $gray-lighter
