--- a/resources/sass/base/pages/app-email.scss
+++ b/resources/sass/base/pages/app-email.scss
@@ -55,7 +55,7 @@ $email_details_header_height: 5rem;
                     color: $primary;
                 }
                 &.active {
-                    border-color: #b19777;
+                    border-color: #838487;
                 }
             }
         }
