--- a/resources/sass/base/pages/app-todo.scss
+++ b/resources/sass/base/pages/app-todo.scss
@@ -45,7 +45,7 @@
                             color: $primary;
                         }
                         &.active {
-                            border-color: #b19777;
+                            border-color: #838487;
                         }
                     }
                 }
