--- a/resources/assets/scss/plugins/magnific-popup.css
+++ b/resources/assets/scss/plugins/magnific-popup.css
@@ -7,7 +7,7 @@
   z-index: 1042;
   overflow: hidden;
   position: fixed;
-  background: #272727;
+  background: #0e0e0e;
   opacity: 0.8; }
 
 .mfp-wrap {
@@ -144,7 +144,7 @@ button::-moz-focus-inner {
     top: 1px; }
 
 .mfp-close-btn-in .mfp-close {
-  color: #272727; }
+  color: #0e0e0e; }
 
 .mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
@@ -206,7 +206,7 @@ button::-moz-focus-inner {
     margin-left: 31px; }
   .mfp-arrow-left:before {
     margin-left: 25px;
-    border-right: 27px solid #272727; }
+    border-right: 27px solid #0e0e0e; }
 
 .mfp-arrow-right {
   right: 0; }
@@ -214,7 +214,7 @@ button::-moz-focus-inner {
     border-left: 17px solid #FFF;
     margin-left: 39px; }
   .mfp-arrow-right:before {
-    border-left: 27px solid #272727; }
+    border-left: 27px solid #0e0e0e; }
 
 .mfp-iframe-holder {
   padding-top: 40px;
