--- a/resources/sass/base/core/colors/palette-variables.scss
+++ b/resources/sass/base/core/colors/palette-variables.scss
@@ -3,9 +3,9 @@
 // Google Color Palette defined: http://www.google.com/design/spec/style/color.html
 $white-color: ( 'base': #ffffff);
 $black-color: ( 'base': #000000);
-$dark-color: ( 'base': theme-color('dark'), 'darken-1': #272727, 'darken-2': #1e1e1e, 'darken-3': #626262);
+$dark-color: ( 'base': theme-color('dark'), 'darken-1': #0e0e0e, 'darken-2': #1e1e1e, 'darken-3': #626262);
 $light-color: ( 'base': theme-color('light'));
-$bauen-color: ('base': #b19777);
+$bauen-color: ('base': #838487);
 $primary-color: ( 'lighten-5': lighten(theme-color('primary'), 25%), 'lighten-4': lighten(theme-color('primary'), 20%), 'lighten-3': lighten(theme-color('primary'), 15%), 'lighten-2': lighten(theme-color('primary'), 10%), 'lighten-1': lighten(theme-color('primary'), 5%), 'base': theme-color('primary'), 'darken-1': darken(theme-color('primary'), 5%), 'darken-2': darken(theme-color('primary'), 10%), 'darken-3': darken(theme-color('primary'), 15%), 'darken-4': darken(theme-color('primary'), 20%), 'accent-1': #bdfdff, 'accent-2': #8afbff, 'accent-3': #57faff, 'accent-4': #3df9ff);
 $secondary-color: ( 'lighten-5': lighten(theme-color('secondary'), 25%), 'lighten-4': lighten(theme-color('secondary'), 20%), 'lighten-3': lighten(theme-color('secondary'), 15%), 'lighten-2': lighten(theme-color('secondary'), 10%), 'lighten-1': lighten(theme-color('secondary'), 5%), 'base': theme-color('secondary'), 'darken-1': darken(theme-color('secondary'), 5%), 'darken-2': darken(theme-color('secondary'), 10%), 'darken-3': darken(theme-color('secondary'), 15%), 'darken-4': darken(theme-color('secondary'), 20%));
 $success-color: ( 'lighten-5': lighten(theme-color('success'), 25%), 'lighten-4': lighten(theme-color('success'), 20%), 'lighten-3': lighten(theme-color('success'), 15%), 'lighten-2': lighten(theme-color('success'), 10%), 'lighten-1': lighten(theme-color('success'), 5%), 'base': theme-color('success'), 'darken-1': darken(theme-color('success'), 5%), 'darken-2': darken(theme-color('success'), 10%), 'darken-3': darken(theme-color('success'), 15%), 'darken-4': darken(theme-color('success'), 20%), 'accent-1': #e1fff1, 'accent-2': #aeffd9, 'accent-3': #7bffc1, 'accent-4': #62ffb5);
