--- a/resources/sass/base/plugins/forms/form-file-uploader.scss
+++ b/resources/sass/base/plugins/forms/form-file-uploader.scss
@@ -13,7 +13,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        color: #b19777;
+        color: #838487;
         display: flex;
         justify-content: center;
         align-items: center;
