CHange phone formatt and enhance contact section

--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -2467,7 +2467,7 @@ button.mfp-arrow {
 
 .main-footer .fotbody h6 {
     font-family: "Montserrat", sans-serif;
-    font-weight: 300;
+    font-weight: bold;
     position: relative;
     font-size: 16px;
 }
