--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -1339,7 +1339,8 @@ hr.dotted {
 }
 
 .services .item img {
-    width: 60px;
+    width: 100px;
+    height: 100px;
     margin-bottom: 20px;
 }
 
